--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@prisma/client": "^2.22.1",
     "expo": "~41.0.1",
     "expo-barcode-scanner": "~10.1.2",
+    "expo-constants": "~10.1.3",
+    "expo-location": "~12.0.4",
+    "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "react": "16.13.1",
