--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-location": "~12.0.4",
     "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.4",
+    "express": "^4.17.1",
     "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
