--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@prisma/client": "^2.22.1",
+    "@react-native-firebase/storage": "^12.0.0",
     "@react-navigation/native": "^5.9.4",
+    "axios": "^0.21.1",
     "expo": "~41.0.1",
     "expo-barcode-scanner": "~10.1.2",
     "expo-constants": "~10.1.3",
@@ -23,6 +25,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-barcode-mask": "^1.2.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-image-picker": "^3.8.0",
     "react-native-maps": "0.27.1",
     "react-native-reanimated": "^2.1.0",
     "react-native-screens": "^3.2.0",
@@ -33,7 +36,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "prisma": "^2.22.1"
+    "@types/node": "^15.3.0",
+    "prisma": "^2.22.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   },
   "private": true
 }
