--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "buffer": "5.0.6",
     "@prisma/client": "^2.22.1",
     "@react-native-firebase/storage": "^12.0.0",
     "@react-navigation/native": "^5.9.4",
@@ -27,8 +28,10 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-image-picker": "^3.8.0",
     "react-native-maps": "0.27.1",
+    "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "^2.1.0",
     "react-native-screens": "^3.2.0",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
